[package]
name = "d1-mini"
version = "0.1.0"
authors = ["Jesse Braham <jesse@beta7.io>"]
edition = "2018"
description = "A Board Support Package (BSP) which provides a type-safe API for the WEMOS/LOLIN D1 mini"
documentation = "https://docs.rs/d1-mini/"
readme = "README.md"
repository = "https://github.com/jessebraham/d1-mini"
license = "MIT OR Apache-2.0"
keywords = [
    "embedded-hal",
    "esp8266",
    "no-std",
    "xtensa"
]
categories = [
    "embedded",
    "hardware-support",
    "no-std"
]

[dependencies]
bitbang-hal = "^0.3"
esp8266-hal =  "0.3.2"
paste = "^1.0"

[dev-dependencies]
panic-halt = "^0.2"

[dev-dependencies.lis3dh]
git = "https://github.com/BenBergman/lis3dh-rs"
rev = "0bd78d8aaf197dba9a4570c2934bf222ca20562c"

[profile.dev]
lto = true
incremental = false
debug = false # debug adds frame pointers, which must be omitted
codegen-units = 1

[profile.release]
lto = true
codegen-units = 1
